@@ -3,29 +3,21 @@ package com.artezo.service.serviceImpl;
 import com.artezo.dto.request.ReviewRequestDto;
 import com.artezo.dto.response.ReviewResponseDto;
 import com.artezo.entity.ReviewEntity;
-import com.artezo.exceptions.MediaUploadException;
-import com.artezo.exceptions.ReviewNotFoundException;
 import com.artezo.repository.ReviewRepository;
-
+import com.artezo.exceptions.ReviewNotFoundException;
+import com.artezo.exceptions.MediaUploadException;
 import com.artezo.service.ReviewService;
-import com.artezo.service.MediaCompressorService;
+import net.coobird.thumbnailator.Thumbnails;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
-import org.springframework.core.env.Environment;
-import org.springframework.util.StringUtils;
 
-import java.io.File;
-import java.io.IOException;
+import java.io.*;
 import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.concurrent.CompletableFuture;  // 🔴 ADD THIS
-import java.util.stream.Collectors;
+import java.util.concurrent.TimeUnit;
 
 @Service
 @Transactional
@@ -34,25 +26,15 @@ public class ReviewServiceImpl implements ReviewService {
     @Autowired
     private ReviewRepository reviewRepository;
 
-    @Autowired
-    private Environment environment;
+    private static final long MAX_IMAGE_SIZE = 5 * 1024 * 1024;
+    private static final long MAX_VIDEO_SIZE = 5 * 1024 * 1024;
+    private static final long TARGET_VIDEO_SIZE = 2 * 1024 * 1024;
 
-    @Autowired
-    private MediaCompressorService compressorService;
-
-    @Value("${file.upload-dir:uploads}")
-    private String uploadDir;
-
-    // Active profile check
-    private boolean isLocalMode() {
-        String[] activeProfiles = environment.getActiveProfiles();
-        return Arrays.asList(activeProfiles).contains("local");
-    }
+    // 🔴 UPDATED: Now just "ffmpeg" since it's in system PATH
+    private static final String FFMPEG_PATH = "C:\\ffmpeg-2026-04-09-git-d3d0b7a5ee-essentials_build\\bin\\ffmpeg.exe";
 
     @Override
     public ReviewResponseDto createReview(ReviewRequestDto requestDto) {
-
-        // Check if user already reviewed this product
         if (reviewRepository.existsByProductIdAndUserId(requestDto.getProductId(), requestDto.getUserId())) {
             throw new RuntimeException("User has already reviewed this product");
         }
@@ -65,318 +47,256 @@ public class ReviewServiceImpl implements ReviewService {
         review.setCreatedAt(LocalDateTime.now());
         review.setUpdatedAt(LocalDateTime.now());
 
-        long startTime = System.currentTimeMillis();
-        System.out.println("⏱️ STARTING REVIEW CREATION AT: " + startTime);
+        // 🔴 NEW: Set default approval values
+        review.setApproved(false);      // Not approved by default
+        review.setStatus("pending");     // Status is pending
+        review.setFlagged(false);        // Not flagged by default
+        review.setReplies(null);         // No replies yet
 
-        // Handle image uploads
         if (requestDto.getImages() != null && !requestDto.getImages().isEmpty()) {
-            handleImageUpload(review, requestDto.getImages());
+            handleImageWithCompression(review, requestDto.getImages().get(0));
         }
 
-        // Handle video uploads
         if (requestDto.getVideos() != null && !requestDto.getVideos().isEmpty()) {
-            handleVideoUpload(review, requestDto.getVideos());
+            handleVideoWithCompression(review, requestDto.getVideos().get(0));
         }
 
-        // Handle base64 images (for local testing)
         if (requestDto.getImageBase64() != null && !requestDto.getImageBase64().isEmpty()) {
-            handleBase64Images(review, requestDto.getImageBase64());
-        }
-
-        // Handle base64 videos (for local testing)
-        if (requestDto.getVideoBase64() != null && !requestDto.getVideoBase64().isEmpty()) {
-            handleBase64Videos(review, requestDto.getVideoBase64());
+            handleBase64Image(review, requestDto.getImageBase64(), requestDto.getImageContentType());
         }
 
         ReviewEntity savedReview = reviewRepository.save(review);
-
-        long endTime = System.currentTimeMillis();
-        System.out.println("⏱️ FINISHED REVIEW CREATION AT: " + endTime);
-        System.out.println("⏱️ TOTAL TIME: " + (endTime - startTime) + "ms (" +
-                ((endTime - startTime) / 1000) + " seconds)");
-
         return ReviewResponseDto.fromEntity(savedReview);
     }
 
-    // 🔴 UPDATED handleImageUpload with timeout
-    private void handleImageUpload(ReviewEntity review, List<MultipartFile> images) {
-        if (images == null || images.isEmpty()) {
-            System.out.println("📸 No images to process");
-            return;
-        }
-
-        System.out.println("📸 Processing " + images.size() + " images");
-        List<String> imageUrls = new ArrayList<>();
-        List<CompletableFuture<File>> futures = new ArrayList<>();
-        List<MultipartFile> originalImages = new ArrayList<>(images); // Store originals for metadata
-
-        // Submit all images for async compression
-        for (MultipartFile image : images) {
-            try {
-                System.out.println("📸 Queuing image: " + image.getOriginalFilename());
-                CompletableFuture<File> future = compressorService.compressImageAsync(image, review.getUserId());
-                futures.add(future);
-            } catch (Exception e) {
-                throw new MediaUploadException("Failed to queue image: " + image.getOriginalFilename(), e);
-            }
-        }
-
-        // 🔴 WAIT FOR ALL COMPRESSIONS TO COMPLETE
+    private void handleImageWithCompression(ReviewEntity review, MultipartFile image) {
         try {
-            System.out.println("⏳ Waiting for " + futures.size() + " images to compress...");
-            CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
-                    .get(30, java.util.concurrent.TimeUnit.SECONDS);
-            System.out.println("✅ All images compressed successfully");
-        } catch (java.util.concurrent.TimeoutException e) {
-            System.err.println("❌ Image compression timed out after 30 seconds");
-            throw new MediaUploadException("Image compression took too long - timeout");
+            long originalSize = image.getSize();
+            System.out.println("📸 Original image size: " + (originalSize / 1024) + "KB (" + String.format("%.2f", originalSize / (1024.0 * 1024.0)) + " MB)");
+
+            if (originalSize > MAX_IMAGE_SIZE) {
+                throw new MediaUploadException("Image size exceeds 5MB limit");
+            }
+
+            byte[] compressedBytes = compressImageInMemory(image.getBytes());
+            long compressedSize = compressedBytes.length;
+
+            double originalMB = originalSize / (1024.0 * 1024.0);
+            double compressedMB = compressedSize / (1024.0 * 1024.0);
+            double savedPercent = ((originalMB - compressedMB) / originalMB) * 100;
+
+            System.out.println("✅ Image compressed: " + String.format("%.2f", originalMB) + "MB → " +
+                    String.format("%.2f", compressedMB) + "MB (Saved " + String.format("%.1f", savedPercent) + "%)");
+
+            review.setImageOriginalSize(originalSize);
+            review.setImageCompressedSize(compressedSize);
+            review.setImageSize(compressedSize);
+            review.setImageData(compressedBytes);
+            review.setImageContentType("image/jpeg");
+            review.setImageName(image.getOriginalFilename());
+
         } catch (Exception e) {
-            System.err.println("❌ Image compression failed: " + e.getMessage());
-            throw new MediaUploadException("Image compression failed", e);
-        }
-
-        // 🔴 PROCESS RESULTS - YE MISSING THA!
-        for (int i = 0; i < futures.size(); i++) {
-            try {
-                CompletableFuture<File> future = futures.get(i);
-                File compressedFile = future.get(); // Will return immediately since we waited
-
-                MultipartFile originalImage = originalImages.get(i);
-
-                // Generate URL with user ID
-                String fileUrl = "/api/user/" + review.getUserId() + "/images/" + compressedFile.getName();
-                imageUrls.add(fileUrl);
-
-                // Store metadata (using first image's content type as reference)
-                if (review.getImageContentType() == null) {
-                    review.setImageContentType(originalImage.getContentType());
-                }
-
-                System.out.println("✅ Image " + (i+1) + " ready: " + compressedFile.getName() +
-                        " | Size: " + (compressedFile.length() / 1024) + "KB");
-
-            } catch (Exception e) {
-                System.err.println("❌ Failed to process compressed image " + (i+1) + ": " + e.getMessage());
-                throw new MediaUploadException("Failed to process compressed image", e);
-            }
-        }
-
-        // 🔴 UPDATE TOTAL IMAGE SIZE (sum of all images)
-        long totalImageSize = 0;
-        for (CompletableFuture<File> future : futures) {
-            try {
-                totalImageSize += future.get().length();
-            } catch (Exception e) {
-                // Ignore, already handled
-            }
-        }
-        review.setImageSize(totalImageSize);
-
-        // Append new URLs to existing ones
-        if (review.getImageUrls() != null && !review.getImageUrls().isEmpty()) {
-            List<String> existingUrls = new ArrayList<>(Arrays.asList(review.getImageUrlsArray()));
-            existingUrls.addAll(imageUrls);
-            review.setImageUrlsArray(existingUrls.toArray(new String[0]));
-            System.out.println("📸 Appended " + imageUrls.size() + " URLs to existing " + existingUrls.size());
-        } else {
-            review.setImageUrlsArray(imageUrls.toArray(new String[0]));
-            System.out.println("📸 Added " + imageUrls.size() + " new image URLs");
+            throw new MediaUploadException("Failed to compress image: " + e.getMessage(), e);
         }
     }
 
-    // 🔴 UPDATED handleVideoUpload with timeout
-    private void handleVideoUpload(ReviewEntity review, List<MultipartFile> videos) {
-        if (videos == null || videos.isEmpty()) return;
-        if (videos.size() > 1) throw new MediaUploadException("Only 1 video allowed");
-
-        List<String> videoUrls = new ArrayList<>();
-        MultipartFile video = videos.get(0);
-
+    /**
+     * 🔴 VIDEO COMPRESSION WITH FFMPEG - NOW WORKING!
+     */
+    private void handleVideoWithCompression(ReviewEntity review, MultipartFile video) {
         try {
-            CompletableFuture<File> future = compressorService.compressVideoAsync(video, review.getUserId());
+            long originalSize = video.getSize();
+            double originalMB = originalSize / (1024.0 * 1024.0);
 
-            // 🔴 WAIT WITH TIMEOUT
-            File compressedFile = future.get(90, java.util.concurrent.TimeUnit.SECONDS);  // 90 sec timeout
+            System.out.println("🎬 Original video size: " + String.format("%.2f", originalMB) + "MB");
 
-            String fileUrl = "/api/user/" + review.getUserId() + "/videos/" + compressedFile.getName();
-            videoUrls.add(fileUrl);
+            if (originalSize > MAX_VIDEO_SIZE) {
+                throw new MediaUploadException("Video size exceeds 5MB limit. Your video: " + String.format("%.2f", originalMB) + "MB");
+            }
 
+            byte[] videoBytes;
+            long compressedSize;
+
+            if (originalSize > TARGET_VIDEO_SIZE) {
+                System.out.println("🎬 Compressing video (target: <2MB)...");
+                videoBytes = compressVideoUsingFFmpeg(video);
+                compressedSize = videoBytes.length;
+
+                double compressedMB = compressedSize / (1024.0 * 1024.0);
+                double savedPercent = ((originalMB - compressedMB) / originalMB) * 100;
+
+                System.out.println("✅ Video compressed: " + String.format("%.2f", originalMB) + "MB → " +
+                        String.format("%.2f", compressedMB) + "MB (Saved " + String.format("%.1f", savedPercent) + "%)");
+            } else {
+                videoBytes = video.getBytes();
+                compressedSize = originalSize;
+                System.out.println("🎬 Video already under 2MB, skipping compression");
+            }
+
+            review.setVideoOriginalSize(originalSize);
+            review.setVideoCompressedSize(compressedSize);
+            review.setVideoSize(compressedSize);
+            review.setVideoData(videoBytes);
             review.setVideoContentType("video/mp4");
-            review.setVideoSize(compressedFile.length());
+            review.setVideoName(video.getOriginalFilename());
 
-        } catch (java.util.concurrent.TimeoutException e) {
-            System.err.println("❌ Video compression timed out after 90 seconds");
-            throw new MediaUploadException("Video compression timeout - try with smaller video");
         } catch (Exception e) {
-            throw new MediaUploadException("Failed to upload video", e);
-        }
-
-        if (review.getVideoUrls() != null && !review.getVideoUrls().isEmpty()) {
-            List<String> existingUrls = new ArrayList<>(Arrays.asList(review.getVideoUrlsArray()));
-            existingUrls.addAll(videoUrls);
-            review.setVideoUrlsArray(existingUrls.toArray(new String[0]));
-        } else {
-            review.setVideoUrlsArray(videoUrls.toArray(new String[0]));
-        }
-    }
-
-    /**
-     * HANDLE BASE64 IMAGES
-     */
-    private void handleBase64Images(ReviewEntity review, List<String> base64Images) {
-        if (base64Images == null || base64Images.isEmpty()) return;
-
-        List<String> imageUrls = new ArrayList<>();
-
-        for (String base64 : base64Images) {
+            System.err.println("⚠️ Video compression failed, storing original: " + e.getMessage());
             try {
-                String[] parts = base64.split(",");
-                byte[] imageBytes = Base64.getDecoder().decode(parts.length > 1 ? parts[1] : parts[0]);
-
-                String fileName = System.currentTimeMillis() + "_base64_image.jpg";
-                saveBytesToDisk(imageBytes, "images", fileName);
-
-                // USER ID IN URL
-                imageUrls.add("/api/user/" + review.getUserId() + "/images/" + fileName);
-                review.setImageContentType("image/jpeg");
-                review.setImageSize((long) imageBytes.length);
-
-            } catch (IllegalArgumentException | IOException e) {
-                throw new MediaUploadException("Invalid base64 image data", e);
-            }
-        }
-
-        if (review.getImageUrls() != null && !review.getImageUrls().isEmpty()) {
-            List<String> existingUrls = new ArrayList<>(Arrays.asList(review.getImageUrlsArray()));
-            existingUrls.addAll(imageUrls);
-            review.setImageUrlsArray(existingUrls.toArray(new String[0]));
-        } else {
-            review.setImageUrlsArray(imageUrls.toArray(new String[0]));
-        }
-    }
-
-    /**
-     * HANDLE BASE64 VIDEOS
-     */
-    private void handleBase64Videos(ReviewEntity review, List<String> base64Videos) {
-        if (base64Videos == null || base64Videos.isEmpty()) return;
-
-        List<String> videoUrls = new ArrayList<>();
-
-        for (String base64 : base64Videos) {
-            try {
-                String[] parts = base64.split(",");
-                byte[] videoBytes = Base64.getDecoder().decode(parts.length > 1 ? parts[1] : parts[0]);
-
-                String fileName = System.currentTimeMillis() + "_base64_video.mp4";
-                saveBytesToDisk(videoBytes, "videos", fileName);
-
-                // USER ID IN URL
-                videoUrls.add("/api/user/" + review.getUserId() + "/videos/" + fileName);
-                review.setVideoContentType("video/mp4");
-                review.setVideoSize((long) videoBytes.length);
-
-            } catch (IllegalArgumentException | IOException e) {
-                throw new MediaUploadException("Invalid base64 video data", e);
-            }
-        }
-
-        if (review.getVideoUrls() != null && !review.getVideoUrls().isEmpty()) {
-            List<String> existingUrls = new ArrayList<>(Arrays.asList(review.getVideoUrlsArray()));
-            existingUrls.addAll(videoUrls);
-            review.setVideoUrlsArray(existingUrls.toArray(new String[0]));
-        } else {
-            review.setVideoUrlsArray(videoUrls.toArray(new String[0]));
-        }
-    }
-
-    /**
-     * SAVE FILE AND GET URL
-     */
-    private String saveFileAndGetUrl(MultipartFile file, String subDirectory) throws IOException {
-        String directory = uploadDir + "/" + subDirectory + "/";
-        Path uploadPath = Paths.get(directory);
-
-        if (!Files.exists(uploadPath)) {
-            Files.createDirectories(uploadPath);
-        }
-
-        String originalFileName = StringUtils.cleanPath(file.getOriginalFilename());
-        String fileName = System.currentTimeMillis() + "_" + originalFileName.replaceAll("\\s+", "_");
-
-        Path filePath = uploadPath.resolve(fileName);
-        Files.copy(file.getInputStream(), filePath);
-
-        return "/uploads/" + subDirectory + "/" + fileName;
-    }
-
-    /**
-     * SAVE BYTES TO DISK
-     */
-    private void saveBytesToDisk(byte[] data, String subDirectory, String fileName) throws IOException {
-        String directory = uploadDir + "/" + subDirectory + "/";
-        Path uploadPath = Paths.get(directory);
-
-        if (!Files.exists(uploadPath)) {
-            Files.createDirectories(uploadPath);
-        }
-
-        Path filePath = uploadPath.resolve(fileName);
-        Files.write(filePath, data);
-    }
-
-    /**
-     * DELETE MEDIA FILES
-     */
-    private void deleteMediaFiles(ReviewEntity review) {
-        if (review.getImageUrls() != null) {
-            for (String imageUrl : review.getImageUrlsArray()) {
-                deleteFile(imageUrl);
-            }
-        }
-
-        if (review.getVideoUrls() != null) {
-            for (String videoUrl : review.getVideoUrlsArray()) {
-                deleteFile(videoUrl);
+                review.setVideoOriginalSize(video.getSize());
+                review.setVideoCompressedSize(video.getSize());
+                review.setVideoSize(video.getSize());
+                review.setVideoData(video.getBytes());
+                review.setVideoContentType(video.getContentType());
+                review.setVideoName(video.getOriginalFilename());
+            } catch (IOException ex) {
+                throw new MediaUploadException("Failed to process video: " + ex.getMessage(), ex);
             }
         }
     }
 
-    /**
-     * DELETE SINGLE FILE
-     */
-    private void deleteFile(String fileUrl) {
+    private byte[] compressVideoUsingFFmpeg(MultipartFile video) throws Exception {
+        File tempInputFile = File.createTempFile("video_input_", ".mp4");
+        File tempOutputFile = File.createTempFile("video_output_", ".mp4");
+
         try {
-            String fileName = fileUrl.substring(fileUrl.lastIndexOf("/") + 1);
-            String subDirectory = fileUrl.contains("/images/") ? "images" : "videos";
-            Path filePath = Paths.get(uploadDir + "/" + subDirectory + "/" + fileName);
-            Files.deleteIfExists(filePath);
-        } catch (IOException e) {
-            System.err.println("Failed to delete file: " + fileUrl);
-        }
-    }
+            video.transferTo(tempInputFile);
 
-    /**
-     * CONVERT RATING DISTRIBUTION
-     */
-    private Map<Integer, Long> convertRatingDistribution(List<Object[]> distribution) {
-        Map<Integer, Long> result = new HashMap<>();
-        for (int i = 1; i <= 5; i++) {
-            result.put(i, 0L);
-        }
+            ProcessBuilder processBuilder = new ProcessBuilder(
+                    FFMPEG_PATH,
+                    "-i", tempInputFile.getAbsolutePath(),
+                    "-vf", "scale=640:360",
+                    "-b:v", "800k",
+                    "-b:a", "64k",
+                    "-r", "24",
+                    "-preset", "fast",
+                    "-fs", String.valueOf(TARGET_VIDEO_SIZE - 100 * 1024),
+                    "-y",
+                    tempOutputFile.getAbsolutePath()
+            );
 
-        if (distribution != null) {
-            for (Object[] row : distribution) {
-                Integer rating = ((Number) row[0]).intValue();
-                Long count = ((Number) row[1]).longValue();
-                result.put(rating, count);
+            processBuilder.redirectErrorStream(true);
+            Process process = processBuilder.start();
+
+            // Read output to avoid blocking
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    if (line.contains("error") || line.contains("Error")) {
+                        System.err.println("FFmpeg: " + line);
+                    }
+                }
             }
-        }
 
-        return result;
+            boolean completed = process.waitFor(60, TimeUnit.SECONDS);
+
+            if (!completed || process.exitValue() != 0) {
+                throw new Exception("FFmpeg compression failed with exit code: " + process.exitValue());
+            }
+
+            byte[] compressedBytes = Files.readAllBytes(tempOutputFile.toPath());
+
+            // If still > 2MB, try aggressive compression
+            if (compressedBytes.length > TARGET_VIDEO_SIZE) {
+                System.out.println("⚠️ Still >2MB, trying aggressive compression...");
+                return aggressiveCompression(tempInputFile);
+            }
+
+            return compressedBytes;
+
+        } finally {
+            tempInputFile.delete();
+            tempOutputFile.delete();
+        }
     }
 
-    // ==================== EXISTING METHODS (UNCHANGED) ====================
+    private byte[] aggressiveCompression(File inputFile) throws Exception {
+        File tempOutputFile = File.createTempFile("video_aggressive_", ".mp4");
+
+        try {
+            ProcessBuilder processBuilder = new ProcessBuilder(
+                    FFMPEG_PATH,
+                    "-i", inputFile.getAbsolutePath(),
+                    "-vf", "scale=480:270",
+                    "-b:v", "400k",
+                    "-b:a", "32k",
+                    "-r", "20",
+                    "-preset", "ultrafast",
+                    "-fs", String.valueOf(TARGET_VIDEO_SIZE - 100 * 1024),
+                    "-y",
+                    tempOutputFile.getAbsolutePath()
+            );
+
+            processBuilder.redirectErrorStream(true);
+            Process process = processBuilder.start();
+            process.waitFor(60, TimeUnit.SECONDS);
+
+            return Files.readAllBytes(tempOutputFile.toPath());
+
+        } finally {
+            tempOutputFile.delete();
+        }
+    }
+
+    private byte[] compressImageInMemory(byte[] imageBytes) throws IOException {
+        ByteArrayInputStream inputStream = new ByteArrayInputStream(imageBytes);
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+
+        Thumbnails.of(inputStream)
+                .size(800, 800)
+                .outputQuality(0.7)
+                .outputFormat("jpg")
+                .toOutputStream(outputStream);
+
+        return outputStream.toByteArray();
+    }
+
+    private void handleBase64Image(ReviewEntity review, String base64Image, String contentType) {
+        try {
+            String[] parts = base64Image.split(",");
+            byte[] imageBytes = Base64.getDecoder().decode(parts.length > 1 ? parts[1] : parts[0]);
+
+            long originalSize = imageBytes.length;
+
+            if (originalSize > MAX_IMAGE_SIZE) {
+                throw new MediaUploadException("Base64 image size exceeds 5MB limit");
+            }
+
+            byte[] compressedBytes = compressImageInMemory(imageBytes);
+            long compressedSize = compressedBytes.length;
+
+            review.setImageOriginalSize(originalSize);
+            review.setImageCompressedSize(compressedSize);
+            review.setImageSize(compressedSize);
+            review.setImageData(compressedBytes);
+            review.setImageContentType(contentType != null ? contentType : "image/jpeg");
+            review.setImageName("base64_image_" + System.currentTimeMillis() + ".jpg");
+
+            System.out.println("📸 Base64 image: " + String.format("%.2f", originalSize / (1024.0 * 1024.0)) + "MB → " +
+                    String.format("%.2f", compressedSize / (1024.0 * 1024.0)) + "MB");
+
+        } catch (Exception e) {
+            throw new MediaUploadException("Failed to process base64 image: " + e.getMessage(), e);
+        }
+    }
+
+    // ==================== MEDIA RETRIEVAL ====================
+
+    @Override
+    public byte[] getReviewMedia(Long reviewId, String mediaType) {
+        ReviewEntity review = reviewRepository.findById(reviewId)
+                .orElseThrow(() -> new ReviewNotFoundException("Review not found with id: " + reviewId));
+
+        if ("image".equalsIgnoreCase(mediaType)) {
+            return review.getImageData();
+        } else if ("video".equalsIgnoreCase(mediaType)) {
+            return review.getVideoData();
+        }
+        return null;
+    }
+
+    // ==================== OTHER METHODS ====================
+
     @Override
     public ReviewResponseDto getReviewById(Long reviewId) {
         ReviewEntity review = reviewRepository.findById(reviewId)
@@ -389,7 +309,7 @@ public class ReviewServiceImpl implements ReviewService {
         List<ReviewEntity> reviews = reviewRepository.findByProductId(productId);
         return reviews.stream()
                 .map(ReviewResponseDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -397,7 +317,7 @@ public class ReviewServiceImpl implements ReviewService {
         List<ReviewEntity> reviews = reviewRepository.findByUserId(userId);
         return reviews.stream()
                 .map(ReviewResponseDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -416,11 +336,11 @@ public class ReviewServiceImpl implements ReviewService {
         review.setUpdatedAt(LocalDateTime.now());
 
         if (requestDto.getImages() != null && !requestDto.getImages().isEmpty()) {
-            handleImageUpload(review, requestDto.getImages());
+            handleImageWithCompression(review, requestDto.getImages().get(0));
         }
 
         if (requestDto.getVideos() != null && !requestDto.getVideos().isEmpty()) {
-            handleVideoUpload(review, requestDto.getVideos());
+            handleVideoWithCompression(review, requestDto.getVideos().get(0));
         }
 
         ReviewEntity updatedReview = reviewRepository.save(review);
@@ -431,84 +351,66 @@ public class ReviewServiceImpl implements ReviewService {
     public void deleteReview(Long reviewId) {
         ReviewEntity review = reviewRepository.findById(reviewId)
                 .orElseThrow(() -> new ReviewNotFoundException("Review not found with id: " + reviewId));
-
-        if (!isLocalMode()) {
-            deleteMediaFiles(review);
-        }
-
         reviewRepository.delete(review);
     }
 
     @Override
     public Map<String, Object> getProductReviewSummary(Long productId) {
         Map<String, Object> summary = new HashMap<>();
-
-        Double avgRating = reviewRepository.getAverageRatingForProduct(productId);
-        Long reviewCount = reviewRepository.getReviewCountForProduct(productId);
-        List<Object[]> ratingDistribution = reviewRepository.getRatingDistribution(productId);
+        // 🔴 UPDATED: Only count approved reviews for average rating
+        Double avgRating = reviewRepository.getAverageRatingForApprovedReviews(productId);
+        Long reviewCount = reviewRepository.getApprovedReviewCountForProduct(productId);
 
         summary.put("productId", productId);
         summary.put("averageRating", avgRating != null ? Math.round(avgRating * 10) / 10.0 : 0.0);
         summary.put("totalReviews", reviewCount != null ? reviewCount : 0);
-        summary.put("ratingDistribution", convertRatingDistribution(ratingDistribution));
-
-        Long reviewsWithImages = (long) reviewRepository.findReviewsWithImages(productId).size();
-        Long reviewsWithVideos = (long) reviewRepository.findReviewsWithVideos(productId).size();
-
-        summary.put("reviewsWithImages", reviewsWithImages);
-        summary.put("reviewsWithVideos", reviewsWithVideos);
 
         return summary;
     }
 
     @Override
-    public byte[] getReviewMedia(Long reviewId, String mediaType) {
-        throw new UnsupportedOperationException("Media is served via URLs, not binary");
-    }
-
-    @Override
     public ReviewResponseDto addImagesToReview(Long reviewId, List<MultipartFile> images) {
         ReviewEntity review = reviewRepository.findById(reviewId)
-                .orElseThrow(() -> new ReviewNotFoundException("Review not found with id: " + reviewId));
+                .orElseThrow(() -> new ReviewNotFoundException("Review not found"));
 
-        handleImageUpload(review, images);
-        ReviewEntity updatedReview = reviewRepository.save(review);
-        return ReviewResponseDto.fromEntity(updatedReview);
+        if (images != null && !images.isEmpty()) {
+            handleImageWithCompression(review, images.get(0));
+        }
+
+        return ReviewResponseDto.fromEntity(reviewRepository.save(review));
     }
 
     @Override
     public ReviewResponseDto addVideosToReview(Long reviewId, List<MultipartFile> videos) {
         ReviewEntity review = reviewRepository.findById(reviewId)
-                .orElseThrow(() -> new ReviewNotFoundException("Review not found with id: " + reviewId));
+                .orElseThrow(() -> new ReviewNotFoundException("Review not found"));
 
-        handleVideoUpload(review, videos);
-        ReviewEntity updatedReview = reviewRepository.save(review);
-        return ReviewResponseDto.fromEntity(updatedReview);
+        if (videos != null && !videos.isEmpty()) {
+            handleVideoWithCompression(review, videos.get(0));
+        }
+
+        return ReviewResponseDto.fromEntity(reviewRepository.save(review));
     }
 
     @Override
-    public void removeMediaFromReview(Long reviewId, String mediaUrl) {
+    public void removeMediaFromReview(Long reviewId, String mediaType) {
         ReviewEntity review = reviewRepository.findById(reviewId)
-                .orElseThrow(() -> new ReviewNotFoundException("Review not found with id: " + reviewId));
+                .orElseThrow(() -> new ReviewNotFoundException("Review not found"));
 
-        if (review.getImageUrls() != null && review.getImageUrls().contains(mediaUrl)) {
-            List<String> urls = new ArrayList<>(Arrays.asList(review.getImageUrlsArray()));
-            urls.remove(mediaUrl);
-            review.setImageUrlsArray(urls.toArray(new String[0]));
-
-            if (!isLocalMode()) {
-                deleteFile(mediaUrl);
-            }
-        }
-
-        if (review.getVideoUrls() != null && review.getVideoUrls().contains(mediaUrl)) {
-            List<String> urls = new ArrayList<>(Arrays.asList(review.getVideoUrlsArray()));
-            urls.remove(mediaUrl);
-            review.setVideoUrlsArray(urls.toArray(new String[0]));
-
-            if (!isLocalMode()) {
-                deleteFile(mediaUrl);
-            }
+        if ("image".equalsIgnoreCase(mediaType)) {
+            review.setImageData(null);
+            review.setImageOriginalSize(null);
+            review.setImageCompressedSize(null);
+            review.setImageSize(null);
+            review.setImageContentType(null);
+            review.setImageName(null);
+        } else if ("video".equalsIgnoreCase(mediaType)) {
+            review.setVideoData(null);
+            review.setVideoOriginalSize(null);
+            review.setVideoCompressedSize(null);
+            review.setVideoSize(null);
+            review.setVideoContentType(null);
+            review.setVideoName(null);
         }
 
         reviewRepository.save(review);
@@ -516,26 +418,126 @@ public class ReviewServiceImpl implements ReviewService {
 
     @Override
     public List<ReviewResponseDto> getRecentReviews(Long productId) {
-        List<ReviewEntity> reviews = reviewRepository.findTopRecentReviews(productId);
+        // 🔴 UPDATED: Only get recent approved reviews
+        List<ReviewEntity> reviews = reviewRepository.findTopRecentApprovedReviews(productId);
         return reviews.stream()
                 .limit(10)
                 .map(ReviewResponseDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<ReviewResponseDto> getReviewsWithImages(Long productId) {
-        List<ReviewEntity> reviews = reviewRepository.findReviewsWithImages(productId);
+        // 🔴 UPDATED: Only get approved reviews with images
+        List<ReviewEntity> reviews = reviewRepository.findApprovedReviewsWithImages(productId);
         return reviews.stream()
                 .map(ReviewResponseDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<ReviewResponseDto> getReviewsWithVideos(Long productId) {
-        List<ReviewEntity> reviews = reviewRepository.findReviewsWithVideos(productId);
+        // 🔴 UPDATED: Only get approved reviews with videos
+        List<ReviewEntity> reviews = reviewRepository.findApprovedReviewsWithVideos(productId);
         return reviews.stream()
                 .map(ReviewResponseDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    // ==================== NEW METHODS FOR ADMIN PANEL ====================
+
+    @Override
+    public List<ReviewResponseDto> getAllReviews() {
+        List<ReviewEntity> reviews = reviewRepository.findAll();
+        return reviews.stream()
+                .map(ReviewResponseDto::fromEntity)
+                .toList();
+    }
+
+    @Override
+    public ReviewResponseDto updateReviewStatus(Long reviewId, String status) {
+        ReviewEntity review = reviewRepository.findById(reviewId)
+                .orElseThrow(() -> new ReviewNotFoundException("Review not found with id: " + reviewId));
+
+        // 🔴 UPDATED: Set both status and approved fields
+        review.setStatus(status);
+        review.setApproved("approved".equalsIgnoreCase(status));
+        review.setUpdatedAt(LocalDateTime.now());
+
+        ReviewEntity updatedReview = reviewRepository.save(review);
+        System.out.println("✅ Review " + reviewId + " status updated to: " + status + ", approved: " + review.getApproved());
+
+        return ReviewResponseDto.fromEntity(updatedReview);
+    }
+
+    @Override
+    public ReviewResponseDto addReplyToReview(Long reviewId, String replyComment) {
+        ReviewEntity review = reviewRepository.findById(reviewId)
+                .orElseThrow(() -> new ReviewNotFoundException("Review not found with id: " + reviewId));
+
+        // 🔴 IMPROVED: Store replies as JSON in the replies field instead of appending to comment
+        List<Map<String, Object>> repliesList = new ArrayList<>();
+
+        // Parse existing replies if any
+        if (review.getReplies() != null && !review.getReplies().isEmpty()) {
+            try {
+                com.fasterxml.jackson.databind.ObjectMapper mapper = new com.fasterxml.jackson.databind.ObjectMapper();
+                repliesList = mapper.readValue(review.getReplies(), new com.fasterxml.jackson.core.type.TypeReference<List<Map<String, Object>>>() {});
+            } catch (Exception e) {
+                System.err.println("Error parsing replies: " + e.getMessage());
+                repliesList = new ArrayList<>();
+            }
+        }
+
+        // Add new reply
+        Map<String, Object> newReply = new HashMap<>();
+        newReply.put("id", System.currentTimeMillis());
+        newReply.put("content", replyComment);
+        newReply.put("adminName", "Admin");
+        newReply.put("date", LocalDateTime.now().toString());
+        repliesList.add(newReply);
+
+        // Save replies as JSON
+        try {
+            com.fasterxml.jackson.databind.ObjectMapper mapper = new com.fasterxml.jackson.databind.ObjectMapper();
+            review.setReplies(mapper.writeValueAsString(repliesList));
+        } catch (Exception e) {
+            System.err.println("Error saving replies: " + e.getMessage());
+        }
+
+        review.setUpdatedAt(LocalDateTime.now());
+        ReviewEntity updatedReview = reviewRepository.save(review);
+        return ReviewResponseDto.fromEntity(updatedReview);
+    }
+
+    @Override
+    public ReviewResponseDto clearFlag(Long reviewId) {
+        ReviewEntity review = reviewRepository.findById(reviewId)
+                .orElseThrow(() -> new ReviewNotFoundException("Review not found with id: " + reviewId));
+
+        // 🔴 UPDATED: Actually clear the flagged field
+        review.setFlagged(false);
+        review.setUpdatedAt(LocalDateTime.now());
+
+        ReviewEntity updatedReview = reviewRepository.save(review);
+        System.out.println("✅ Flag cleared for review " + reviewId);
+
+        return ReviewResponseDto.fromEntity(updatedReview);
+    }
+
+    @Override
+    public List<ReviewResponseDto> bulkApproveReviews(List<Long> reviewIds) {
+        List<ReviewEntity> reviews = reviewRepository.findAllById(reviewIds);
+        for (ReviewEntity review : reviews) {
+            review.setStatus("approved");
+            review.setApproved(true);
+            review.setUpdatedAt(LocalDateTime.now());
+        }
+        List<ReviewEntity> updatedReviews = reviewRepository.saveAll(reviews);
+        System.out.println("✅ Bulk approved " + updatedReviews.size() + " reviews");
+
+        return updatedReviews.stream()
+                .map(ReviewResponseDto::fromEntity)
+                .toList();
     }
 }
